@@ -20,10 +20,11 @@ NEW    : Ticket #1627, Ope the file's directory from the clip properties
 CHANGED: Updated Belarusian, Chinese (simplified and traditional), Czech, Dutch, French,
          German, Hebrew, Japanese, Polish, Russian, Slovakian, Ukrainian translations
 CHANGED: Updated libogg to v1.3.0
-CHANGED: Updated SoundTouch to v1.6.1pre r130
+CHANGED: Updated SoundTouch to v1.6.1pre r131
 CHANGED: Updated VirtualDub to v1.10.1-test11
 CHANGED: Updated MediaInfoLib to v0.7.48
 CHANGED: Updated ZenLib to v0.4.21
+CHANGED: Updated Little CMS to v2.2 git
 FIXED  : If "Play # time(s)" was set to a value higher than one and if the playlist
          had more than one element, the playback never stopped.
 FIXED  : If the playlist had only invalid elements, the player would try to
